--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
@@ -97,15 +97,15 @@
 <div class="clearfix">&nbsp;</div> -->
 
 	 <!--   <p>With direct deposit, you receive your tax refunds and benefit payments faster and securely, directly in your account at a Canadian financial institution. In the event of an emergency or unforeseen circumstance, using direct deposit will ensure you continue to get your payments on time.</p>-->
-	 <p>If you have a Canadian bank account and expect to receive at least one of the following payments for your business from the CRA, you can sign up for direct deposit:</p>
-                <ul>
+	 <p>If you have a Canadian bank account and expect to receive payments for your business from the CRA, you can sign up for direct deposit.</p>
+             <!--   <ul>
                     <li>Corporation income tax refund</li>
                     <li>GST/HST refund</li>
                     <li>Refund of excise tax or other levies</li>
                     <li>Refund of payroll deductions</li>
-                </ul>  
+                </ul>  -->
 	  <!-- <p>Sign up for direct deposit or update your information with your bank account information, which is on your personal cheques or online banking portal. If you can't find the information, contact your financial institution.</p>-->
-<p>To sign your business up for direct deposit, you will need:</p>
+<p><!-To sign your business up for direct deposit, -->You will need:</p>
 	   <ul class="fa-ul">
 		   <li><span class="fas fa-check text-success fa-li"></span>The proper authority to makes requests on behalf of the business: usually an owner, partner, director or an individual with delegated authority</li>
 		   <li><span class="fas fa-check text-success fa-li"></span>To <a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit/help-centre.html#a1a">find your banking information</a> at the bottom of your business cheques
@@ -115,7 +115,7 @@
 			   <li>Visit your company's bank and request a printed copy of the account information</li></ul>
 	   </details>
 		   </li>
-		   <li><span class="fas fa-check text-success fa-li"></span>A 15-digit CRA <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business/adding-accounts-your-business-number-bn.html">program account</a> number from one of the following program accounts:
+		   <li><span class="fas fa-check text-success fa-li"></span>A 15-digit CRA <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business/adding-accounts-your-business-number-bn.html">program account</a> number from one of the following program accounts, depending on how you are signing up:
 		   <ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
       <li class="cnjnctn-col">
     <h4 class="mrgn-tp-sm text-muted">Online<span class="wb-inv">: Option 1</span></h4>
@@ -128,7 +128,7 @@
 		<li>RU - Underused housing tax</li></ul>
       </li>
       <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted">Through your Canadian financial institution<span class="wb-inv">: Option 2</span></h4>
+    <h4 class="mrgn-tp-sm text-muted">Through your Canadian bank or credit union<span class="wb-inv">: Option 2</span></h4>
         <ul><li>RT – GST/HST</li>
 		<li>RP – Payroll deductions</li>
 		<li>RC – Corporation income tax</li>
@@ -157,7 +157,7 @@
     <li>Update your direct deposit information</li>
   </ol>		
 <h3 class=h4>If you can't access your account</h3>
-	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel3">update your information through your Canadian financial institution</a>.</p>
+	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel3">update your information through your Canadian bank or credit union</a>.</p>
 	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
 <!--	<details><summary class="max-content">Make a change for someone else</summary>	
 		<p>To change direct deposit information for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
@@ -236,11 +236,11 @@
 
 		</details>-->
 		<details id="details-panel3" class="provisional wb-details-close">
-        <summary><span class="fas fa-university mrgn-rght-sm"></span>Through your Canadian financial institution</summary>
+        <summary><span class="fas fa-university mrgn-rght-sm"></span>Through your Canadian bank or credit union</summary>
 <!--<p><span class="far fa-clock"></span> <strong>Processing time:</strong> The following business day</p>-->
 	   <p class="mrgn-tp-md"><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>
 
- <p>You can sign up for direct deposit or change your account information through many Canadian banks, credit unions, and trust companies. Visit your financial institution's website for information on how to sign up.</p>
+ <p>You can sign up for direct deposit or change your account information through many Canadian banks, credit unions, and trust companies. Once you provide consent through one of these financial institutions, your CRA direct deposit information will be updated. Visit your bank or credit union's website for information on how to sign up.</p>
 		<!--	<p>To be eligible to enroll for CRA direct deposit for businesses, your business must have a valid 15&nbsp;digit business number and one of the following <a href="/en/revenue-agency/services/tax/businesses/topics/changes-your-business/adding-accounts-your-business-number-bn.html">CRA program accounts</a>:</p>
                 <ul>
                     <li>RT – Goods and Services Tax/Harmonized Sales Tax</li>
@@ -253,7 +253,7 @@
 			
 
                     <details class="mrgn-bttm-lg" id="dd-fi-businesses">
-                    <summary>Choose your Canadian financial institution</summary>
+                    <summary>Choose your Canadian bank or credit union</summary>
 			    							  <!-- <p>Once you provide consent through one of these financial institutions, your CRA direct deposit information will be updated the following business day.</p>-->
 
                     <div class="wb-filter mrgn-tp-md" id="dd-businesses">
