--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
@@ -97,9 +97,9 @@
 <div class="clearfix">&nbsp;</div> -->
 
 	 <!--   <p>With direct deposit, you receive your tax refunds and benefit payments faster and securely, directly in your account at a Canadian financial institution. In the event of an emergency or unforeseen circumstance, using direct deposit will ensure you continue to get your payments on time.</p>-->
-	                 <p>If you are the trustee, custodian, executor, or other type of legal representative for a trust, you can start or change direct deposit information. You must have a bank account at a Canadian financial institution. The name on the bank account must match the name of the trust.</p>
+	                 <p>If you are the trustee, custodian, executor, or other type of legal representative for a trust, you can sign up for direct deposit or change your account information. You must have a bank account at a Canadian bank or credit union. The name on the bank account must match the name of the trust.</p>
 	   <p>Direct deposit is not available for trusts that are non-resident or deemed resident in Canada.</p>
-	   <p>You will need to <a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit/help-centre.html#a1a">find your banking information</a> at the bottom of your personal cheques or in your online banking portal. If you can't find the information, contact your financial institution.</p>
+	   <p>You will need to <a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit/help-centre.html#a1a">find your banking information</a> at the bottom of your personal cheques or in your online banking portal. If you can't find the information, contact your bank or credit union.</p>
 
 	  <!-- <p>Sign up for direct deposit or update your information with your bank account information, which is on your personal cheques or online banking portal. If you can't find the information, contact your financial institution.</p>-->
 
@@ -181,10 +181,12 @@
 	  </details>
 
 	   
-	 <!--  <h2>Change your direct deposit information with other government departments</h2>
-	   <p>The <abbr title="Canada Revenue Agency">CRA</abbr> does not administer CPP [and what else?]. Go to:&nbsp;<a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Direct deposit</a> to update your information for these programs.</p>
+	   <h2>Change your direct deposit information with other government departments</h2>
+	   <p>You need to contact each government organization that sends payments to you to give them your updated information.</p>
+	   <p>The CRA wil <strong>not</strong> share your direct deposit information with other government departments.</p>
+	   <p><a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Change your direct deposit information with a different department or agency</a></p>
 
-	     <p>The <abbr title="Canada Revenue Agency">CRA</abbr> will <strong>not</strong> share your direct deposit information with other government departments.</p>-->
+	    <!-- <p>The <abbr title="Canada Revenue Agency">CRA</abbr> will <strong>not</strong> share your direct deposit information with other government departments.</p>-->
 <!--<p>You can get more information about Government of Canada payments by direct deposit by going to <a href="https://www.tpsgc-pwgsc.gc.ca/recgen/txt/faq-eng.html#a4">Questions on direct deposit</a>.</p> -->
  
 	   
