--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
@@ -158,7 +158,8 @@
   </ol>		
 <h3 class=h4>If you can't access your account</h3>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel3">update your information through your Canadian bank or credit union</a>.</p>
-	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
+	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using your CRA accounts</a></p>
+			
 <!--	<details><summary class="max-content">Make a change for someone else</summary>	
 		<p>To change direct deposit information for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 
