--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
@@ -135,7 +135,7 @@
   </ol>		
 <h3 class="h4 class="mrgn-tp-xl">If you can't access your account</h3>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by mail</a>.</p>
-	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help with using your CRA accounts</a></p>
+	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using your CRA accounts</a></p>
 </details>
 		<details id="details-panel2" class="provisional wb-details-close">
             <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
