--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-individuals.html
@@ -131,8 +131,7 @@
 			
 <h2 class=h4>If you can't access your account</h2>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to use another method<!--<a href="#details-panel3">update your information by phone</a>-->.</p>
-	<p>For more help with your account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for CRA accounts</a></p>
-	<!--<details><summary class="max-content">Make a change for someone else</summary>-->
+<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using your CRA accounts</a></p>	<!--<details><summary class="max-content">Make a change for someone else</summary>-->
 			<h2 class=h4>Make a change for someone else</h2>
 		<p>To change direct deposit information for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 
