--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -4,7 +4,7 @@
 <head prefix="og: http://ogp.me/ns#">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>Help for CRA accounts - Canada.ca</title>
+<title>Help with using your CRA accounts - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 <link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
 <link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html"/>
@@ -117,7 +117,7 @@
   </div>
 </div>
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
-  <h1 property="name" class="gc-thickline" id="wb-cont" dir="ltr">Help for CRA accounts</h1>
+  <h1 property="name" class="gc-thickline" id="wb-cont" dir="ltr">Help with using your CRA accounts</h1>
   <div  data-wb-urlmapping='{
 	"type=myacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_mya"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_mya\"])", "class": "wb-tgfltr-out" }], "type=mybusacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_myba"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_myba\"])", "class": "wb-tgfltr-out" }], "type=rac": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_rac"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_rac\"])", "class": "wb-tgfltr-out" }]
 }'></div>
