--- a/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
@@ -43,7 +43,7 @@
 					title: "CRA accounts",
 					href: "/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html"
 					},{
-					title: "Help for CRA accounts",
+					title: "Help with using your CRA accounts",
 					href: "/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html"
 				}],
 				search: true,
