--- a/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html
+++ b/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html
@@ -240,7 +240,7 @@
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
  <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
 <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA accounts</a></li>
-			<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help for CRA accounts</a></li>
+			<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help with using your CRA accounts</a></li>
 
 </ol></div></nav>
 
