--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -230,7 +230,7 @@
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-login.html#section2" class="stretched-link">Account availability</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/availability.html" class="stretched-link">Account availability</a></h3>
                 <p>Hours of service, browser requirements</p>
               </div>
             </div>
