--- a/en/revenue-agency/services/e-services/cra-login-services/updaterac.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/updaterac.html
@@ -246,7 +246,7 @@
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
  <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
 <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA accounts</a></li>
-			<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help for CRA accounts</a></li>
+			<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help with using your CRA accounts</a></li>
 
 </ol></div></nav>
 
@@ -347,12 +347,12 @@
 		<p>Representatives can delete the authorizations of their individual and business clients. The feature is available in the <strong>Manage clients</strong> tab of the <strong>Review and update</strong> menu.</p>
 	</details>
 	<details><summary>View list of notices issues</summary>
-		<p>The <strong>List of notices issued</strong> services allows you to view notices of assessment (NOA) and notices of reassessment (NOR) issued to your clients as a result of a tax return being filed or amended. The list will show notices issued in the last 365 days. </p><p><strong>List of notices issued</strong> can be accessed directly through Represent a Client.</p>
+		<p>The <strong>List of notices issued</strong> service allows you to view notices of assessment (NOA) and notices of reassessment (NOR) issued to your clients as a result of a tax return being filed or amended. The list will show notices issued in the last 365 days. </p><p><strong>List of notices issued</strong> can be accessed directly through Represent a Client.</p>
 	</details>
 		<details>
       <summary>Manage online mail for registered electronic filers (EFILE for T1 returns)</summary>
       <p>Registered electronic filers can receive pre-assessment and processing review letters, relating to T1 returns, online. </p>
-      <p>Authorization is granted when:</p>
+      <p>Authorization to manage online mail is granted when:</p>
       <ul class="list-unstyled cnjnctn-type-and cnjnctn-xs mrgn-lft-lg">
       <li class="cnjnctn-col">
         <p>The taxpayer completes Part D of <a href="">Form T183, Information Return for Electronic Filing of an Individual's Income Tax and Benefit Return</a> </p>
@@ -368,14 +368,14 @@
     <li>Select <strong>RepID Information</strong>, <strong>Business Information</strong>, or <strong>GroupID information</strong> as applicable</li>
     <li>Select <strong>Manage online mail</strong></li>
   </ol>
-			<p>To view the letters, select <strong>Access mail</strong> from the left hand side bar.
+			<p>To view the letters, select <strong>Mail</strong> from the left hand side bar.
       <p>Only letters received electronically are available for viewing online in Represent a Client.</p>
     </details>
     
 <h2>Review and update your business information</h2>
    <details>
    <summary>Update business name and contact information</summary>
-    <p>Before you can change your business name in RAC, you must update your business name in our BN database. Sign in to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a> and select <strong>Manage operating names</strong> to add, remove, or change an operating name.</p> <p>For more information, go to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business/change-operating-name.html">Change a business operating name</a></p>
+    <p>Before you can change your business name in RAC, you must update your business name in our BN database. Sign in to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account</a>, select <strong>Profile</strong>, and then choose <strong>Manage operating names</strong> to add, remove, or change an operating name.</p> <p>For more information, go to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business/change-operating-name.html">Change a business operating name</a></p>
 	   
     <p>After you have updated your business name in our BN database, update your business name within your RAC account:</p>
    <ol class="">
