--- a/en/revenue-agency/services/e-services/cra-login-services/about-login.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-login.html
@@ -70,12 +70,13 @@
 	     <ul>
 	     <li>A temporary tax number (TTN)</li>
 		     <li>An individual tax number (ITN)</li>
+		     <li>A non-resident representative number (NRRN), for Represent a Client only</li>
      </ul></li>
-     <li><span class="fas fa-check text-success fa-li"></span>A filed and assessed tax return from the current or previous tax year</li>
+     <li><span class="fas fa-check text-success fa-li"></span>A filed and assessed income tax and benefit return from the current or previous tax year</li>
 	<details class="max content"><summary>If you have not filed your tax return</summary>
-		<p>If you have not filed your taxes for the current or previous tax year, you will not be able to register for a CRA account using a CRA user ID and password or an Interac sign-in partner.</p>
+		<p>If you have not filed your taxes for the current or previous tax year, you will not be able to register for a CRA account using a CRA user ID and password or an Interac&reg sign-in partner.</p>
 		<p>For information on how to file, go to: <a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes.html">Get ready to do your taxes</a></p>
-		<p>If you live in BC or Alberta, you may be able to register for My Account using a provincial sign-in partner.</p>
+		<p>If you live in British Columbia or Alberta, you may be able to register for My Account using a provincial sign-in partner.</p>
 	</details>
 	</ul>
 	
