--- a/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html
+++ b/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html
@@ -231,7 +231,7 @@
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
  <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
             <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA accounts</a></li>
-<li><a href='/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html'>My Account for Individuals</a></li>
+<li><a href='/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html'>My Account for Individuals sign-in</a></li>
 </ol></div></nav>
 
 
@@ -299,17 +299,17 @@ About My Account</h1>
     </ul>
 	<h2 id="section1">What's new and updated</h2>
 	<h3><i>Interac&reg</i> document verification service (DVS)</h3>
-	<p>Document verification service (DVS) is an alternative identity validation option that allows Canadians to register for and access the CRA accounts in real-time. DVS provides the option for digital identity validation through document verification when registering for the CRA’s accounts. Canadians choosing this option will no longer need to wait up to 10 business days to receive a CRA security code by paper mail in order to register and access the CRA accounts. The process requires a mobile device to take a picture of the user’s government-issued photo identification and of themselves to verify their identity. The following are the requirements for this service:</p>
+	<p>The document verification service (DVS) is an alternative identity validation option that allows Canadians to register for and access the CRA accounts in real-time. DVS provides the option for digital identity validation through document verification when registering for the CRA’s accounts. Canadians choosing this option will no longer need to wait up to 10 business days to receive a CRA security code by paper mail in order to register and access the CRA accounts. The process requires a mobile device to take a picture of the user’s government-issued photo identification and of themselves to verify their identity. To use this service you must:</p>
 	<ul>
 		<li>Be 16 years of age or older</li>
-		<li>Have an accepted government-issued document</li>
+		<li>Have an accepted government-issued photo identification</li>
 		<li>Have a mobile device with a working camera</li>
 	</ul>
 	<p>The following original government-issued documents are accepted:</p>
 	<ul>
 		<li>Canadian passport</li>
 		<li>Canadian driver's license</li>
-		<li>Provincial/Territorial photo ID card</li>
+		<li>Provincial or territorial photo ID card</li>
 	</ul>
 	<h3>Language of correspondence</h3>
 	<p>A new service called "Language of correspondence" was added to the <strong>Profile</strong> page in My Account allowing users to update their preferred language of correspondence between English and French.</p>
@@ -347,8 +347,8 @@ About My Account</h1>
 	<h3>Signing in on behalf of someone else</h3>
 	<p>If you want to sign in to My Account on behalf of someone else (including friends and family members), you must use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a> to access their information.</p>
 	
-<h3>My Account of a deceased person</h3>
-	<p>You <strong>cannot</strong> use the CRA accounts to access information for deceased persons, unless you are that person's representative. If not, you will have to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us</a>. </p>
+<h3>Entering information for a deceased person</h3>
+	<p>You <strong>cannot</strong> use the CRA accounts to access information for a deceased person, unless you are that person's representative. If not, you will have to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/corporate/contact-information.html#assistance">contact us</a>. </p>
 	<p>Representatives (for example, an executor) can access My Account on behalf of a deceased person using <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.
 	
 	<h2 id="section3">Sign-in options</h2>
@@ -401,7 +401,8 @@ About My Account</h1>
 	<li>View your RRSP limit</li>
 	<li>Set up a payment plan</li>
 </ul>
- <p>Until you receive your security code and complete your registration, you will only have access to limited features in your CRA Account.</p>
+	<p>If you register using the document verification service, you will have full access to your account immediately.</p>
+ <p>If you choose to receive your CRA security code in the mail, you will only have access to limited features until you complete your registration.</p>
 <!-- </div>
 <div class="table parbase section">
 <table class="table table-bordered table-striped table-responsive">
