--- a/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html
+++ b/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html
@@ -627,7 +627,7 @@ About My Account</h1>
 
     
  <h2 id="section6">Resources</h2>
-  <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help for My Account</a></p>
+  <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using My Account</a></p>
 
 <!--<h2 id="section4">Privacy commitments</h2>
 	<p>Use the following links to read about our privacy commitments regarding your account:</p>
