--- a/en/revenue-agency/services/e-services/digital-services-businesses/business-account/about-myba.html
+++ b/en/revenue-agency/services/e-services/digital-services-businesses/business-account/about-myba.html
@@ -305,27 +305,27 @@ About My Business Account</h1>
     </ul>
 	<h2 id="section1">What's new and updated</h2>
   <h3>Get quick access by validating your identity when you register</h3>
-<p><i>Interac&reg</i> document verification service (DVS) is an alternative identity validation option that allows Canadians to register for and access the CRA accounts in real-time. DVS provides the option for digital identity validation through document verification when registering for the CRA’s accounts. Canadians choosing this option will no longer need to wait up to 10 business days to receive a CRA security code by paper mail in order to register and access the CRA accounts. The process requires a mobile device to take a picture of the user’s government-issued photo identification and of themselves to verify their identity. The following are the requirements for this service:</p>
+<p><i>Interac&reg</i> document verification service (DVS) is an alternative identity validation option that allows Canadians to register for and access the CRA accounts in real-time. DVS provides the option for digital identity validation through document verification when registering for the CRA’s accounts. Canadians choosing this option will no longer need to wait up to 10 business days to receive a CRA security code by paper mail in order to register and access the CRA accounts. The process requires a mobile device to take a picture of the user’s government-issued photo identification and of themselves to verify their identity. To use this service you must:</p>
 <ul>
 <li>Be 16 years of age or older</li>
-<li>Have an accepted government-issued document</li>
+<li>Have an accepted government-issued photo identification</li>
 <li>Have a mobile device with a working camera</li>
 </ul>
 <p>The following original government-issued documents are accepted:</p>
 <ul>
 <li>Canadian passport</li>
 <li>Canadian driver's license</li>
-<li>Provincial/Territorial photo ID card</li>
+<li>Provincial or territorial photo ID card</li>
 </ul>
 	<h3>Mail service updates</h3>
 <p>The following changes were made to the “Mail” service in My Business Account:</p>
 <ul>
-<li>The service was updated with an enhanced user interface, as well as new and improved message/mail filtering and sorting options.</li>
-<li>A new <strong>“Access services”</strong> button was added allowing users to access other communication services that are available within the My Business Account portal.</li>
-<li>A new <strong>“Reply”</strong> feature was added on specific Audit enquiries correspondence allowing users to reply directly to the CRA.</li>
-<li>A new <strong>“Switch business account”</strong> drop down button was added allowing users to switch between business accounts they have authorized access to.</li>
-<li>A new <strong>“Proceed to pay”</strong> action button was added for specific correspondence items allowing users to move from the mail page directly to the payment process.</li>
-<li>A new <strong>“Submit document”</strong> action button was added for specific correspondence items allowing users to move from the mail page directly to the submit documents process.</li>
+<li>The service was updated with an enhanced user interface, as well as new and improved message/mail filtering and sorting options</li>
+<li>A new <strong>“Access services”</strong> button was added allowing users to access other communication services that are available within the My Business Account portal</li>
+<li>A new <strong>“Reply”</strong> feature was added on specific Audit enquiries correspondence allowing users to reply directly to the CRA</li>
+<li>A new <strong>“Switch business account”</strong> drop down button was added allowing users to switch between business accounts they have authorized access to</li>
+<li>A new <strong>“Proceed to pay”</strong> action button was added for specific correspondence items allowing users to move from the mail page directly to the payment process</li>
+<li>A new <strong>“Submit document”</strong> action button was added for specific correspondence items allowing users to move from the mail page directly to the submit documents process</li>
 </ul>
 <h3>Connect with us</h3>
 <p>A new link called “Connect with us” was added to the “Correspondence” side bar taking users to a page with options to contact the CRA or to get help on specific topics that can be found outside the portal.</p>
